[package]
name = "stream-guard"
description = "RAII wrapper around Stream that invokes a custom action on drop "
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fwcd/stream-guard"
categories = ["asynchronous"]

[dependencies]
futures = "0.3.30"
pin-project = "1.1.5"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros"] }
